--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "pinterest-scraper-api",
+  "name": "pinterest-puppeteer-scraper",
   "version": "1.0.0",
+  "description": "Pinterest image scraper API using Puppeteer",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "author": "Mahi Z. Eren",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "puppeteer": "^20.9.0"
   }
 }
