--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pinterest-puppeteer-scraper",
+  "name": "pinterest-image-api",
   "version": "1.0.0",
-  "description": "Pinterest image scraper API using Puppeteer",
+  "description": "Pinterest image scraper API",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -9,7 +9,8 @@
   "author": "Mahi Z. Eren",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^20.9.0"
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2"
   }
 }
