--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "pinterest-image-api",
   "version": "1.0.0",
-  "description": "Pinterest image scraper API",
+  "description": "Pinterest scraper API for high quality image search",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "author": "Mahi Z. Eren",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2"
   }
 }
