--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pinterest-image-api",
   "version": "1.0.0",
-  "description": "Pinterest scraper API for high quality image search",
+  "description": "Scrapes Pinterest search and returns image URLs",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -10,7 +10,6 @@
   "dependencies": {
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
-    "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.18.2"
   }
 }
