--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "pinterest-image-api",
+  "name": "pinterest-scraper",
   "version": "1.0.0",
-  "description": "Scrapes Pinterest search and returns image URLs",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true echo 'skip'"
   },
-  "author": "Mahi Z. Eren",
   "dependencies": {
-    "axios": "^1.6.8",
-    "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "puppeteer": "^20.9.0"
   }
 }
