--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "pinterest-scraper",
+  "name": "pinterest-api",
   "version": "1.0.0",
+  "description": "Pinterest image search scraper",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true echo 'skip'"
+    "start": "node index.js"
   },
+  "keywords": [],
+  "author": "Eren",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^20.9.0"
+    "pinterest-scraper": "^1.3.2",
+    "cors": "^2.8.5"
   }
 }
